--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/pdf.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/pdf.html.twig
@@ -5,13 +5,17 @@
         var html2pdf = {
             footer: {
                 height: "1cm",
-                contents: '<div class="center"><table width="100%"><tr><td align="left" style="font-size: 12px;">Generated: {{timestamp}}</td><td align="right" style="font-size: 12px;">page {% verbatim %}{{pageNumber}} of {{totalPages}}{% endverbatim %}</td></tr></table></div>'
+                contents: '<div class="center"><table width="100%"><tr><td align="left" style="font-size: 12px;">Generated: {{'now'|date('Y-m-d g:i A (T)')}}</td><td align="right" style="font-size: 12px;">page {% verbatim %}{{pageNumber}} of {{totalPages}}{% endverbatim %}</td></tr></table></div>'
             }
         };
         </script>
         <style type='text/css'>
-            @import url('{{baseUrl}}/css/projects.css');
-            @import url('{{baseUrl}}/includes/css/projects-pdf.css');
+        {% stylesheets
+            '@PelagosAppBundle/Resources/public/css/projects-pdf.css'
+            '@PelagosAppBundle/Resources/public/css/projects.css'
+        %}
+            @import url('{{asset_url}}');
+        {% endstylesheets %}
         </style>
         <style media='all'>
             @page { margin: 48px; }
@@ -21,7 +25,11 @@
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
     </head>
     <body style='font-family:'>
-        <div id='header'><img src='{{baseUrl}}/includes/images/griidc_header.png'></div>
-        {% include 'html/projects.html' with {'pdf' : true} %}
+        <div id='header'>
+            {% image '@PelagosAppBundle/Resources/public/images/griidc_header.png' %}
+            <img src='{{asset_url}}'>
+            {% endimage %}
+        </div>
+        {% include 'PelagosAppBundle:DatasetMonitoring:projects.html.twig' with {'pdf' : true} %}
     </body>
 </html>
