--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -11,7 +11,12 @@
         {{ add_css(asset_url) }}
     {% endstylesheets %}
 
-    {{ add_js('https://cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js') }}
+    {{ add_js(
+        [
+            '//cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js',
+            '//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.15.5/js/jquery.tablesorter.min.js',
+        ]
+    ) }}
 
     {% javascripts
         '@PelagosAppBundle/Resources/public/js/dataset-monitoring.js'
