Initial port of dotgraph chart.
This is not yet complete.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -266,3 +266,9 @@
     </tfoot>
     {% endif %}
 </table>
+<div
+    class="dotTotal"
+    total-available="{{available_green}}"
+    total-registered="{{registered_green - available_green}}"
+    total-identified="{{identified_green - registered_green}}"
+    />
