--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -15,12 +15,14 @@
         [
             '//cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js',
             '//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.15.5/js/jquery.tablesorter.min.js',
+            '//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js',
         ]
     ) }}
 
     {% javascripts
         '@PelagosAppBundle/Resources/public/js/dataset-monitoring.js'
         '@PelagosAppBundle/Resources/public/js/tree.js'
+        '@PelagosAppBundle/Resources/public/js/dotgraph.js'
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
     %}
         {{ add_js(asset_url) }}
