--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
@@ -46,10 +46,11 @@
     entityNiceName = "Person"
     viewInterface = "{{ path('pelagos_app_ui_person_default') }}"
     personInterface = "{{ path('pelagos_app_ui_person_default') }}"
+    entityApi = "{{ path('pelagos_api_people_get_collection') }}"
     class = "entityTable stripe"
     width = "100%"
     data-ajax = '{
-        "url": "{{ path('pelagos_api_people_get_collection') }}",
+        "url": "{{ path('pelagos_api_people_get_collection') }}?properties=id,firstName,lastName,lastName,emailAddress,creationTimeStamp,creator.id,creator.firstName,creator.lastName,modificationTimeStamp,modifier.id,modifier.firstName,modifier.lastName",
         "dataSrc": "",
         "cache": true
     }'
@@ -74,6 +75,8 @@
     ]'
     creatorColumn = "5"
     modifierColumn = "7"
+    creationTimeStampColumn = "4"
+    modificationTimeStampColumn = "6"
 >
     <thead>
         <tr>
