Removed data management summary graph and identified from total datasets over time graph.

--- a/web/applications/stats/templates/html/overview.html
+++ b/web/applications/stats/templates/html/overview.html
@@ -1,13 +1,12 @@
 <div style="display: table-cell; height:100%;">
-    <div id="stats-overview">
-
+    <div class="stats-overview" style="margin-bottom: -10px;">
         <div class="stats-overview-row">
-
-            {% include "html/overview/summary-of-records.html" %}
 
             {% include "html/overview/total-records-over-time.html" %}
 
         </div>
+    </div>
+    <div class="stats-overview">
 
         <div class="stats-overview-row">
 
