--- a/web/applications/stats/includes/css/stats.css
+++ b/web/applications/stats/includes/css/stats.css
@@ -6,9 +6,9 @@
     min-height: 450px;
 }
 
-#stats-overview {
+.stats-overview {
     display: table;
-    height: 100%;
+    height: 50%;
     width: 100%;
     border-spacing: 10px;
 }
