--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/projects.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/projects.html.twig
@@ -56,7 +56,7 @@
                 </table>
             </div>
             {% endif %}
-            {% if ResearchGroup.Datasets|length > 0 %}
+            {% if ResearchGroup.Datasets | submittedDIFs | length > 0 %}
                 {% include 'PelagosAppBundle:DatasetMonitoring:datasets.html.twig' with {'datasets': ResearchGroup.datasets} %}
             {% else %}
                 <div class="nodata"><em>{no dataset identified}</em></div>
