--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
@@ -10,16 +10,17 @@
 </div>
 {% endif %}
 
-{% if dataset.metadata.keywords|default %}
+{% if dataset.metadata.themeKeywords|default %}
 <h2>Theme Keywords:</h2>
 <div>
-    {{dataset.metadata.keywords|default}}
+    {% for themeKeyword in dataset.metadata.themeKeywords %}
+    {{themeKeyword|join}}
 </div>
 {% endif %}
 
-{% if dataset.metadata|default %}
+{% if dataset.metadata.fileFormat|default %}
 <h2>File Format:</h2>
 <div>
-{{dataset.metadata.fileformat}}
+{{dataset.metadata.fileFormat}}
 </div>
 {% endif %}
