Added status for dataland.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataland-details.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataland-details.css
@@ -112,12 +112,9 @@ tr:hover.dsrow
 	background-color: #DFD;
 }
 
-.datasets
+.datasets td
 {
-	width:100%;
-	height:100%;
-	overflow-y:scroll;
-	overflow-x:hidden;
+    padding: 0px;
 }
 
 .dsdetails
