Updated legacy account application verbiage to be non-GoMRI-specific.

--- a/web/applications/account/templates/email_not_found.html
+++ b/web/applications/account/templates/email_not_found.html
@@ -4,12 +4,6 @@
         I'm sorry, no match was found for the email address: <strong>{{email}}</strong>
     </p>
     <p>
-        Please check the <a href='http://research.gulfresearchinitiative.org/gomri-funded-researchers/' target='_blank'>GoMRI Research Project Information System (RPIS)</a> to be sure you are listed and that your email address is correct.
-    </p>
-    <p>
-        If you are not listed in <a href='http://research.gulfresearchinitiative.org/gomri-funded-researchers/' target='_blank'>RPIS</a>, or your email address in <a href='http://research.gulfresearchinitiative.org/gomri-funded-researchers/' target='_blank'>RPIS</a> is incorrect, please contact Jay Ritchie (<a href='mailto:jay.ritchie@gomri.org'>jay.ritchie@gomri.org</a>).
-    </p>
-    <p style='margin-top:2em;'>
-        If you are not affiliated with any GoMRI research project (and therefore would not be listed in <a href='http://research.gulfresearchinitiative.org/gomri-funded-researchers/' target='_blank'>RPIS</a>), but otherwise affiliated with GoMRI (e.g., GoMRI-AU, Research Board, etc.), please email <a href='mailto:griidc@gomri.org'>griidc@gomri.org</a> to request special authorization for a GRIIDC account.
+        We are unable to find your email address in our list of affiliated researchers, please email <a href='mailto:griidc@gomri.org'>griidc@gomri.org</a> for further assistance.
     </p>
 </div>
