--- a/web/applications/account/templates/verify_form.html
+++ b/web/applications/account/templates/verify_form.html
@@ -4,10 +4,10 @@ Note: If you have forgotten your password, you may reset it at: <a href="/accoun
 </p>
 <form method=post action='{{baseUrl}}/new'>
 <p>
-Currently, only GoMRI scientists, researchers, and data managers can request a GRIIDC account. No account is required for data download.
+Currently, only GoMRI and Florida Restore Act Centers of Excellence Program scientists, researchers, and data managers can request a GRIIDC account. No account is required for data download.
 </p>
 <p>
-To verify your identity, please provide your email address (associated with GoMRI): <input name=email size=50 maxlength=100>
+To verify your identity, please provide your email address (associated with your grant funding agreement): <input name=email size=50 maxlength=100>
 </p>
 <p>
 <input type=submit value=Next>
