Updated new account interface verbiage to be non-GoMRI-specific.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/Account.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/Account.html.twig
@@ -12,7 +12,7 @@
     <table width="100%" border="0">
         <tr>
             <td width="50%">
-                 <h2>Please provide the email address associated with your GoMRI funding agreement when requesting an account.</h2>
+                 <h2>Please provide the email address associated with your funding agreement when requesting an account.</h2>
             </td>
         </tr>
             <tr>
