--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/PasswordReset.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/PasswordReset.html.twig
@@ -12,7 +12,7 @@
     <table width="100%" border="0">
         <tr>
             <td width="50%">
-                 <h2>To reset your password, please provide the email address associated with your GoMRI funding agreement.</h2>
+                 <h2>To reset your password, please provide the email address associated with your funding agreement.</h2>
             </td>
         </tr>
             <tr>
