--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -1,6 +1,8 @@
+{% if not dataland | default %}
 <div class="tooltip-note" style="float:right; margin-right:5px; margin-bottom:3px; font-size:8pt;">
     place your mouse over each icon for a description
 </div>
+{% endif %}
 <table class="datasets tablesorter status">
     <thead>
         <tr>
