Fixed link, case issue, file size and missing distro on generator.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/CI_ResponsibleParty.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/CI_ResponsibleParty.xml.twig
@@ -6,7 +6,7 @@
             <gco:CharacterString>{{Person.organization}}</gco:CharacterString>
         </gmd:organisationName>
         <gmd:positionName>
-            <gco:CharacterString>{{Person.Position}}</gco:CharacterString>
+            <gco:CharacterString>{{Person.position}}</gco:CharacterString>
         </gmd:positionName>
     <gmd:contactInfo>
         <gmd:CI_Contact>
