--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MI_Metadata.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MI_Metadata.xml.twig
@@ -38,7 +38,7 @@
         {% include "PelagosAppBundle:MetadataGenerator:MD_DataIdentification.xml.twig" %} 
     </gmd:identificationInfo>
     <gmd:distributionInfo>
-        {# % include "xml/MD_Distribution.xml" % #}
+        {% include "PelagosAppBundle:MetadataGenerator:MD_Distribution.xml.twig" %}
     </gmd:distributionInfo>
     <gmd:metadataMaintenance>
         <gmd:MD_MaintenanceInformation>
