--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -63,11 +63,17 @@
             <gmd:distributorFormat/>
             <gmd:distributorTransferOptions>
                 <gmd:MD_DigitalTransferOptions>
-                    <gmd:transferSize/>
+                    {% if dataset.datasetSubmission.datasetFileSize is empty %}
+                        <gmd:transferSize/>
+                    {% else %}
+                        <gmd:transferSize>
+                            <gco:Real>{{dataset.datasetSubmission.datasetFileSize}}</gco:Real>
+                        </gmd:transferSize>
+                    {% endif %}
                     <gmd:onLine>
                         <gmd:CI_OnlineResource>
                             <gmd:linkage>
-                                <gmd:URL>https://data.gulfresearchinitiative.org/metadata/{{dataset.udi}}</gmd:URL>
+                                <gmd:URL>https://data.gulfresearchinitiative.org/data/{{dataset.udi}}</gmd:URL>
                             </gmd:linkage>
                         </gmd:CI_OnlineResource>
                     </gmd:onLine>
