--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -46,10 +46,10 @@
                             <gmd:onlineResource>
                                 <gmd:CI_OnlineResource>
                                     <gmd:linkage>
-                                        <gmd:URL>http://data.gulfresearchinitiative.org</gmd:URL>
+                                        <gmd:URL>https://data.gulfresearchinitiative.org</gmd:URL>
                                     </gmd:linkage>
                                     <gmd:protocol>
-                                        <gco:CharacterString />
+                                        <gco:CharacterString>https</gco:CharacterString>
                                     </gmd:protocol>
                                 </gmd:CI_OnlineResource>
                             </gmd:onlineResource>
