--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -60,7 +60,7 @@
             <gmd:distributorFormat/>
             <gmd:distributorTransferOptions>
                 <gmd:MD_DigitalTransferOptions>
-                    {% if dataset.datasetSubmission.datasetFileSize is empty %}
+                    {% if dataset.datasetSubmission.datasetFileSize|default is empty %}
                         <gmd:transferSize/>
                     {% else %}
                         <gmd:transferSize>
